classDiagram
    %% 实体定义
    class Ebook {
        +int id
        +string BookName
        +string Author
        +string CoverImg
        +int Hotness
        +int TotalWord
    }

    class Volume {
        +int id
        +string Title
        +string Introduction
        +int OrderNum
        +int BookId
    }

    class EbookChapter {
        +int id
        +string Title
        +string Content
        +int OrderNum
        +int VolumeId
        +int BookId
    }

    class WebBook {
        +int id
        +string WebBookName
        +bool AutoSyncEnabled
        +bool isCheckRepeat
        +int defaultIndex
        +int BookId
    }

    class WebBookChapter {
        +int id
        +string WebTitle
        +int IndexId
    }

    class WebBookChapterURL {
        +int id
        +string Path
        +int WebBookChapterId
    }

    class WebBookIndexSourceURL {
        +int id
        +string Path
        +int WebBookId
    }

    class Tag {
        +int id
        +string Text
        +string Color
    }

    class EBookTag {
        +int BookId
        +int TagId
    }

    class ReviewRule {
        +int id
        +string Name
        +string Rule
        +string Replace
    }

    class ReviewRuleUsing {
        +int RuleId
        +int BookId
    }

    class Bookmark {
        +int id
        +int IndexId
    }

    class SystemConfig {
        +int id
        +string Group
        +string Name
        +string Value
    }

    %% ---------- 关联关系（标准单向箭头） ----------
    %% Ebook 与 Volume
    Ebook "1" --> "0..*" Volume : has

    %% Ebook 与 EbookChapter
    Ebook "1" --> "0..*" EbookChapter : has

    %% Volume 与 EbookChapter（可选外键）
    Volume "1" --> "0..*" EbookChapter : contains (nullable)

    %% Ebook 与 WebBook（一对一扩展）
    Ebook "1" --> "0..1" WebBook : extends

    %% EbookChapter 与 WebBookChapter（一对一扩展）
    EbookChapter "1" --> "0..1" WebBookChapter : extends

    %% WebBook 与 WebBookIndexSourceURL
    WebBook "1" --> "0..*" WebBookIndexSourceURL : has

    %% WebBookChapter 与 WebBookChapterURL
    WebBookChapter "1" --> "0..*" WebBookChapterURL : has

    %% ---------- 多对多通过中间表 ----------
    %% Ebook 与 Tag 通过 EBookTag
    Ebook "1" --> "0..*" EBookTag : has
    Tag "1" --> "0..*" EBookTag : used in
    EBookTag "1" --> "1" Ebook : belongs to
    EBookTag "1" --> "1" Tag : belongs to

    %% ReviewRule 与 Ebook 通过 ReviewRuleUsing
    ReviewRule "1" --> "0..*" ReviewRuleUsing : applied by
    Ebook "1" --> "0..*" ReviewRuleUsing : uses
    ReviewRuleUsing "1" --> "1" ReviewRule : references
    ReviewRuleUsing "1" --> "1" Ebook : references

    %% Bookmark 与 EbookChapter（一对一）
    EbookChapter "1" --> "0..1" Bookmark : has